# rust_trader

./: .gitignore  .pre-commit-config.yaml  AI_TESTING_GUIDE.md  README.md  TESTING_DECISIONS.md  TESTING_STRATEGY.md  pyproject.toml  pytest.ini  requirements-dev.txt  sum_five.py
.github/workflows/: ci.yml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli_interface.py
tests/property/: __init__.py  test_mathematical_properties.py
tests/unit/: __init__.py  test_input_parsing.py  test_main_function.py  test_mathematical_operations.py
